# MandelbrotRust

./: Cargo.toml  README.md  image.py  pyproject.toml
src/: complex.rs  lib.rs
