[tool.poetry]
authors = ["Freddy Wordingham <f.wordingham@exeter.ac.uk>"]
description = "An example full-stack web-application."
license = "MIT"
name = "my_library"
version = "0.1.0"

[tool.poetry.dependencies]
colour = "^0.1.5"
fastapi = "^0.79.0"
numpy = "^1.23.2"
Pillow = "^9.2.0"
python = ">=3.8,<3.11"
tqdm = "^4.64.0"
uvicorn = "^0.18.2"
maturin = "^0.13.2"
setuptools-rust = "^1.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.0.0"
flake8 = "^4.0.1"
jupyter = "^1.0.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "mandelbrot"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
